# advent-of-code-2024

./: Cargo.toml  bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  dayx.rs  lib.rs
src/day6/: generator.rs  mod.rs  part1.rs  part2.rs
